# Emci

./: .gitignore  README.md  build&run.bat  cmd_common.h  cmd_parser.c  cmd_parser.h  cmd_profile.c  cmd_profile.h  cmd_std_handlers.c  cmd_std_handlers.h  demo_main.c  emci_config.h  emci_main.c  emci_profile.c  emci_profile.h
demo_app/: CMakeLists.txt  build&run.bat  build.bat  demo_main.c  emci_config.h  emci_profile.c  emci_profile.h
emci/: cmd_arg.c  cmd_arg.h  cmd_common.h  cmd_parser.c  cmd_parser.h  cmd_std_handlers.c
include/: cmd_arg.h  cmd_std_handlers.h  emci_arg.h  emci_parser.h  emci_std_handlers.h
src/: cmd_arg.c  cmd_arg.h  cmd_parser.c  cmd_std_handlers.c  emci_arg.c  emci_parser.c  emci_std_handlers.c
